[package]
name = "jms_usage_bot"
version = "0.1.0"
edition = "2021"
authors = ["Richard Yao <2501.owlsome@gmail.com>"]
description = "A simple Just My Socks data usage notifier"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "time"] }
